<resources>

    <!-- App -->
    <string name="app_name">OneSpace</string>
    <string name="app_extname">Communicator</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>

    <!-- Error -->
    <string name="error_username_invalid">This username is invalid</string>
    <string name="error_password_invalid">This password is too short</string>
    <string name="error_password_incorrect">This password is incorrect</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_connection_fail">Connection Failed</string>
    <string name="error_server_unavailble">Server unavailable</string>
    <string name="error_location_unavailable">Location Service unavailable</string>
    <string name="error_camera_not_support">Sorry! Your device doesn\'t support camera</string>
    <string name="error_missing_google_play_services">You cannot use map cause Google Play services is missing</string>
    <string name="error_no_internet_connection">No Internet Connection</string>

    <string name="display">Display</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <!-- Menu -->
    <string name="map">Map</string>
    <string name="chat">Chats</string>
    <string name="contact">Contacts</string>
    <string name="setting">Settings</string>
    <string name="leave_group">Leave group</string>

    <!-- Alert -->
    <string name="alert_confirm_logout">Do you want to logout?</string>
    <string name="alert_confirm_leave_group">Do you really want to leave this group?</string>
    <string name="alert_confirm_open_chat">Do you want go to chat?</string>
    <string name="alert_confirm_delete_corner">Do you want to delete this corner?</string>
    <string name="alert_confirm_clear_chat_history">Are you sure to clear your chat history?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="confirm_ok">OK</string>
    <string name="confirm_cancel">Cancel</string>

    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_chat">Chats</string>
    <string name="title_activity_recent_chat">Chats</string>
    <string name="title_activity_map">Map</string>


    <string name="title_contacts_tab_all">All</string>
    <string name="title_contacts_tab_friend">Friends</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>


