<?xml version="1.0" encoding="utf-8"?>
<com.sesame.onespace.views.SoftKeyboardListenedRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/soft_keyboard_listened_layout"
    android:background="@color/color_primary"
    tools:context="com.sesame.onespace.activities.LoginActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/login_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_heightPercent="25%"
                android:id="@+id/app_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_app_flat_white_192dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="5%"
                app:layout_marginBottomPercent="3%"
                android:layout_above="@+id/input_form"/>

            <LinearLayout
                android:id="@+id/input_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_above="@+id/signup_button"
                android:background="@drawable/shape_rounded_white"
                android:padding="5dp"
                app:layout_marginPercent="5%">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_username"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_password"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_password_confirm"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_confirm" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_button"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:background="@color/color_primary_dark"
                android:layout_above="@+id/empty_view"
                app:layout_marginLeftPercent="5%"
                app:layout_marginRightPercent="5%"
                app:layout_marginBottomPercent="12%"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/signup_button"
                android:layout_centerHorizontal="true">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"
                    android:indeterminate="true"/>

                <ImageButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_cancel_white"/>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="5%"
                android:layout_above="@+id/already_account_button"
                android:id="@+id/empty_view"/>

            <Button
                android:id="@+id/already_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/already_member"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>


        </android.support.percent.PercentRelativeLayout>

    </android.support.design.widget.CoordinatorLayout>


</com.sesame.onespace.views.SoftKeyboardListenedRelativeLayout>